bk_ida/gccida/g0/optimize_bit_field
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3188:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+60h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3200:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
bitfield = ( rtx)body[1]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3262:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( src = ( rtx)body[1]; *( _WORD *)src == 63 && !*( _DWORD *)&src[1]; src = src->fld[0].rtx ) 
                  ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3265:22: error: use of undeclared identifier 'machine_mode'
src = gen_lowpart( ( machine_mode)*( ( unsigned __int8 *)memrefa + 2), *( rtx *)&body[1]); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3274:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)dest + 2)] == mode_class_0[*( unsigned __int8 *)( dest->fld[0].rtwint + 2)]; 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3274:54: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)dest + 2)] == mode_class_0[*( unsigned __int8 *)( dest->fld[0].rtwint + 2)]; 
                                                     ^~~~~~~~~~~~
                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/function.c:3288:25: error: use of undeclared identifier 'machine_mode'
newreg = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)dest + 2)); 
                        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_bit_field/src/obj/function.o] Error 1
